added few more links, sorted roughly categories and subcategories

--- a/pages/blogs.html
+++ b/pages/blogs.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>&#9875; start_page</title>
+    <title>&#128221; Blogs</title>
 
     <link rel="stylesheet" type="text/css" href="../style/bootstrap.min.css">
 </head>
@@ -14,28 +14,55 @@
 
     <nav class="navbar navbar-dark bg-dark">
         <div class="container-fluid">
-            <span class="navbar-brand mb-0 h1">mgelios's start page &#128102;</span>
+            <a href="../index.html" class="navbar-brand mb-0 h1">Blogs</a>
         </div>
     </nav>
     <div class="card-columns"></div>
     <div class="container">
        <div class="row"  data-masonry='{"percentPosition": true }'>
+
             <div class="col-lg-4 col-md-6">
                 <div class="card text-bg-secondary mb-3 mt-3">
                       <div class="card-body">
-                      <h5 class="card-title">&#128221; Blogs</h5>
-                      <p class="card-text">Some blogs</p>
+                      <h5 class="card-title">&#128221; It specialists</h5>
+                      <p class="card-text">it specialists blogs</p>
                       </div>
                       <div class="list-group list-group-flush">
                           <a href="https://dotsandbrackets.com/" class="list-group-item list-group-item-action"><span class="badge bg-info">D</span> Dots and brackets</a>
-                          <a href="https://blog.dahr.ru/" class="list-group-item list-group-item-action"><span class="badge text-bg-danger">D</span> Dahr's blog</a>
                           <a href="https://kovchinnikov.info/" class="list-group-item list-group-item-action"><span class="badge bg-info">K</span> Kovchinnikov's blog</a>
                           <a href="https://www.swyx.io/" class="list-group-item list-group-item-action"><span class="badge text-bg-light">[S]</span> Swyx</a>
                           <a href="http://sereja.me/" class="list-group-item list-group-item-action"><span class="badge text-bg-light">S</span> Sergey Slotin</a>
                           <a href="https://cupsofcode.com/" class="list-group-item list-group-item-action"><span class="badge text-bg-warning">C</span> Cups of code</a>
                           <a href="https://vvsevolodovich.dev/" class="list-group-item list-group-item-action"><span class="badge text-bg-secondary">V</span> Vladimir Ivanov's blog</a>
-                          <a href="https://phreedom.club/~tolstoevsky/" class="list-group-item list-group-item-action"><span class="badge text-bg-dark">T</span> Tolstoevsky</a>
                           <a href="http://danluu.com/" class="list-group-item list-group-item-action"><span class="badge text-bg-light">D</span> Danluu</a>
+                          <a href="https://neustadt.fr/" class="list-group-item list-group-item-action"><span class="badge text-bg-light">P</span> Parimal Satyal</a>
+                      </div>
+                </div>
+            </div>
+
+            <div class="col-lg-4 col-md-6">
+                <div class="card text-bg-secondary mb-3 mt-3">
+                      <div class="card-body">
+                      <h5 class="card-title">&#128221; Artists</h5>
+                      <p class="card-text">Artists blogs</p>
+                      </div>
+                      <div class="list-group list-group-flush">
+                          <a href="https://blog.dahr.ru/" class="list-group-item list-group-item-action"><span class="badge text-bg-danger">D</span> Dahr's blog</a>
+                          <a href="https://karanak.livejournal.com/" class="list-group-item list-group-item-action"><span class="badge text-bg-danger">K</span> Karanak</a>
+                      </div>
+                </div>
+            </div>
+
+            <div class="col-lg-4 col-md-6">
+                <div class="card text-bg-secondary mb-3 mt-3">
+                      <div class="card-body">
+                      <h5 class="card-title">&#128221; Geek</h5>
+                      <p class="card-text">Blogs with geek content</p>
+                      </div>
+                      <div class="list-group list-group-flush">
+                          <a href="https://phreedom.club/~tolstoevsky/" class="list-group-item list-group-item-action"><span class="badge text-bg-dark">T</span> Tolstoevsky</a>
+                          <a href="https://satyrs.eu/" class="list-group-item list-group-item-action"><span class="badge text-bg-light">S</span> Satyr's forest</a>
+                          <a href="https://adityatelange.in/" class="list-group-item list-group-item-action"><span class="badge text-bg-light">A</span> Aditya Telange</a>
                       </div>
                 </div>
             </div>
