--- a/pages/entertainment.html
+++ b/pages/entertainment.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>&#9875; start_page</title>
+    <title>Entertainment</title>
 
     <link rel="stylesheet" type="text/css" href="../style/bootstrap.min.css">
 </head>
@@ -14,12 +14,27 @@
 
     <nav class="navbar navbar-dark bg-dark">
         <div class="container-fluid">
-            <span class="navbar-brand mb-0 h1">mgelios's start page &#128102;</span>
+            <a href="../index.html" class="navbar-brand mb-0 h1">Entertainment</a>
         </div>
     </nav>
     <div class="card-columns"></div>
     <div class="container">
        <div class="row"  data-masonry='{"percentPosition": true }'>
+            <div class="col-lg-4 col-md-6">
+                <div class="card text-bg-light mb-3 mt-3">
+                      <div class="card-body">
+                      <h5 class="card-title">&#128173; Inspiration</h5>
+                      <p class="card-text">Some websites where I take inspiration</p>
+                      </div>
+                      <div class="list-group list-group-flush">
+                          <a href="https://www.pinterest.com/" class="list-group-item list-group-item-action"><span class="badge text-bg-danger">P</span> Pinterest</a>
+                          <a href="https://hackaday.io" class="list-group-item list-group-item-action"><span class="badge bg-dark">H</span> Hackaday</a>
+                          <a href="https://www.reddit.com" class="list-group-item list-group-item-action"><span class="badge text-bg-danger">R</span> Reddit</a>
+                          <a href="https://www.joyreactor.cc" class="list-group-item list-group-item-action"><span class="badge text-bg-warning">J</span> Joyreactor</a>
+                          <a href="https://www.pikabu.ru" class="list-group-item list-group-item-action"><span class="badge text-bg-success">P</span> Pikabu</a>
+                      </div>
+                </div>
+            </div>
             <div class="col-lg-4 col-md-6">
                 <div class="card text-bg-light mb-3 mt-3">
                       <div class="card-body">
@@ -30,6 +45,7 @@
                           <a href="https://www.youtube.com" class="list-group-item list-group-item-action"><span class="badge text-bg-danger">You</span> Youtube</a>
                           <a href="https://www.vk.com" class="list-group-item list-group-item-action"><span class="badge text-bg-primary">VK</span> VKontakte</a>
                           <a href="https://www.facebook.com" class="list-group-item list-group-item-action"><span class="badge text-bg-primary">F</span> Facebook</a>
+                          <a href="https://www.twitter.com" class="list-group-item list-group-item-action"><span class="badge text-bg-primary">T</span> Twitter</a>
                       </div>
                 </div>
             </div>
@@ -47,18 +63,42 @@
                 </div>
             </div>
             <div class="col-lg-4 col-md-6">
-                <div class="card text-bg-light mb-3 mt-3">
+                <div class="card text-bg-primary mb-3 mt-3">
                       <div class="card-body">
-                      <h5 class="card-title">&#128173; Inspiration</h5>
-                      <p class="card-text">Some websites where I take inspiration</p>
+                      <h5 class="card-title">&#127911; Movies</h5>
+                      <p class="card-text">Movies related links</p>
                       </div>
                       <div class="list-group list-group-flush">
-                          <a href="https://www.pinterest.com/" class="list-group-item list-group-item-action"><span class="badge text-bg-danger">P</span> Pinterest</a>
-                          <a href="https://hackaday.io" class="list-group-item list-group-item-action"><span class="badge bg-dark">H</span> Hackaday</a>
+                          <a href="https://hd.kinopoisk.ru/" class="list-group-item list-group-item-action"><span class="badge bg-info">K</span> Kinopoisk HD</a>
+                          <a href="http://baskino.me/" class="list-group-item list-group-item-action"><span class="badge bg-info">B</span> Baskino.me</a>
                       </div>
                 </div>
             </div>
-
+            <div class="col-lg-4 col-md-6">
+                <div class="card text-bg-primary mb-3 mt-3">
+                      <div class="card-body">
+                      <h5 class="card-title">&#127911; Music</h5>
+                      <p class="card-text">Music related links</p>
+                      </div>
+                      <div class="list-group list-group-flush">
+                          <a href="https://music.yandex.ru/" class="list-group-item list-group-item-action"><span class="badge bg-info">Y</span> Yandex Music</a>
+                      </div>
+                </div>
+            </div>
+            <div class="col-lg-4 col-md-6">
+                <div class="card text-bg-primary mb-3 mt-3">
+                      <div class="card-body">
+                      <h5 class="card-title">&#127911; Fan sites</h5>
+                      <p class="card-text">Fan sitess</p>
+                      </div>
+                      <div class="list-group list-group-flush">
+                          <a href="https://wiby.me/" class="list-group-item list-group-item-action"><span class="badge text-bg-success">W</span> Wiby</a>
+                          <a href="https://swalker.org/" class="list-group-item list-group-item-action"><span class="badge text-bg-success">S</span> Swalker</a>
+                          <a href="https://everydaycarry.com/" class="list-group-item list-group-item-action"><span class="badge text-bg-success">E</span> EDC</a>
+                          <a href="https://lozhki.net/" class="list-group-item list-group-item-action"><span class="badge text-bg-success">L</span> Lozhki.net</a>
+                      </div>
+                </div>
+            </div>
        </div>
     </div>
 </body>
