--- a/pages/news.html
+++ b/pages/news.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>&#9875; start_page</title>
+    <title>News</title>
 
     <link rel="stylesheet" type="text/css" href="../style/bootstrap.min.css">
 </head>
@@ -14,29 +14,54 @@
 
     <nav class="navbar navbar-dark bg-dark">
         <div class="container-fluid">
-            <span class="navbar-brand mb-0 h1">mgelios's start page &#128102;</span>
+            <a href="../index.html" class="navbar-brand mb-0 h1">News</a>
         </div>
     </nav>
     <div class="card-columns"></div>
     <div class="container">
        <div class="row"  data-masonry='{"percentPosition": true }'>
+
             <div class="col-lg-4 col-md-6">
                 <div class="card text-bg-warning mb-3 mt-3">
                       <div class="card-body">
-                      <h5 class="card-title">&#128187; IT News</h5>
-                      <p class="card-text">Some it news websites</p>
+                      <h5 class="card-title">&#128187; I'm writing</h5>
+                      <p class="card-text">Resources I'm writing articles on</p>
                       </div>
                       <div class="list-group list-group-flush">
                           <a href="https://www.habr.com" class="list-group-item list-group-item-action"><span class="badge text-bg-secondary">H</span> Habr</a>
-                          <a href="https://www.linux.org.ru" class="list-group-item list-group-item-action"><span class="badge text-bg-secondary">L</span> Linux.org.ru</a>
                           <a href="https://www.medium.com" class="list-group-item list-group-item-action"><span class="badge text-bg-dark">M</span> Medium</a>
+                      </div>
+                </div>
+            </div>
+
+            <div class="col-lg-4 col-md-6">
+                <div class="card text-bg-dark mb-3 mt-3">
+                      <div class="card-body">
+                      <h5 class="card-title">&#128187; IT Common</h5>
+                      <p class="card-text">Some it news websites</p>
+                      </div>
+                      <div class="list-group list-group-flush">
+                          <a href="https://www.linux.org.ru" class="list-group-item list-group-item-action"><span class="badge text-bg-secondary">L</span> Linux.org.ru</a>
                           <a href="https://3dnews.ru/" class="list-group-item list-group-item-action"><span class="badge text-bg-primary">3D</span> 3D news</a>
                           <a href="https://www.render.ru" class="list-group-item list-group-item-action"><span class="badge bg-info">R</span> Render.ru</a>
-                          <a href="https://www.devby.io" class="list-group-item list-group-item-action"><span class="badge text-bg-primary">D</span> Dev.by</a>
                           <a href="https://tproger.ru/" class="list-group-item list-group-item-action"><span class="badge text-bg-dark">TP</span> TProger</a>
-                          <a href="https://phreedom.club/" class="list-group-item list-group-item-action"><span class="badge text-bg-light">Ph</span> Phreedom</a>
+                          <a href="https://proglib.io/" class="list-group-item list-group-item-action"><span class="badge text-bg-dark">P</span> Proglib</a>
                           <a href="https://dtf.ru/" class="list-group-item list-group-item-action"><span class="badge text-bg-info">D</span> DTF</a>
                           <a href="https://www.ixbt.com/" class="list-group-item list-group-item-action"><span class="badge text-bg-primary">iX</span> iXBT</a>
+                          <a href="https://phreedom.club/" class="list-group-item list-group-item-action"><span class="badge text-bg-light">Ph</span> Phreedom</a>
+                      </div>
+                </div>
+            </div>
+            <div class="col-lg-4 col-md-6">
+                <div class="card text-bg-primary ng mb-3 mt-3">
+                      <div class="card-body">
+                      <h5 class="card-title">&#128187; IT Companies</h5>
+                      <p class="card-text">Some it news websites</p>
+                      </div>
+                      <div class="list-group list-group-flush">
+                          <a href="https://www.devby.io" class="list-group-item list-group-item-action"><span class="badge text-bg-primary">D</span> Dev.by</a>
+                          <a href="https://www.dou.ua" class="list-group-item list-group-item-action"><span class="badge text-bg-dark">D</span> DOU</a>
+                          <a href="https://www.ebanoe.it" class="list-group-item list-group-item-action"><span class="badge text-bg-secondary">E</span> Ebanoe</a>
                       </div>
                 </div>
             </div>
@@ -49,13 +74,10 @@
                       <div class="list-group list-group-flush">
                           <a href="https://www.onliner.by" class="list-group-item list-group-item-action"><span class="badge text-bg-danger">O</span> Onliner.by</a>
                           <a href="https://www.zerkalo.io" class="list-group-item list-group-item-action"><span class="badge text-bg-danger">Z</span> Zerkalo.io</a>
-                          <a href="https://www.joyreactor.cc" class="list-group-item list-group-item-action"><span class="badge text-bg-warning">J</span> Joyreactor</a>
-                          <a href="https://www.pikabu.ru" class="list-group-item list-group-item-action"><span class="badge text-bg-success">P</span> Pikabu</a>
-                          <a href="https://www.reddit.com" class="list-group-item list-group-item-action"><span class="badge text-bg-danger">R</span> Reddit</a>
-                          <a href="https://www.dtf.ru" class="list-group-item list-group-item-action"><span class="badge text-bg-info">D</span> DTF</a>
                       </div>
                 </div>
             </div>
+
        </div>
     </div>
 </body>
