--- a/pages/tools.html
+++ b/pages/tools.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>&#9875; start_page</title>
+    <title>Tools</title>
 
     <link rel="stylesheet" type="text/css" href="../style/bootstrap.min.css">
 </head>
@@ -14,12 +14,13 @@
 
     <nav class="navbar navbar-dark bg-dark">
         <div class="container-fluid">
-            <span class="navbar-brand mb-0 h1">mgelios's start page &#128102;</span>
+            <a href="../index.html" class="navbar-brand mb-0 h1">Tools</a>
         </div>
     </nav>
     <div class="card-columns"></div>
     <div class="container">
        <div class="row"  data-masonry='{"percentPosition": true }'>
+
             <div class="col-lg-4 col-md-6">
                 <div class="card text-bg-light mb-3 mt-3">
                       <div class="card-body">
@@ -27,13 +28,54 @@
                       <p class="card-text">Util web resources</p>
                       </div>
                       <div class="list-group list-group-flush">
+                          <a href="https://github.com/" class="list-group-item list-group-item-action"><span class="badge text-bg-dark">Git</span> GitHub</a>
                           <a href="https://trello.com/" class="list-group-item list-group-item-action"><span class="badge text-bg-primary">T</span> Trello</a>
                           <a href="https://notion.so/" class="list-group-item list-group-item-action"><span class="badge text-bg-light">[N]</span> Notion</a>
                           <a href="https://jwt.io/" class="list-group-item list-group-item-action"><span class="badge text-bg-light">J</span> JWT</a>
-                          <a href="https://translate.google.com/" class="list-group-item list-group-item-action"><span class="badge text-bg-primary">G-T</span> Google translate</a>
+                          <a href="https://linkedin.com/" class="list-group-item list-group-item-action"><span class="badge text-bg-primary">L</span> LinkedIn</a>
                       </div>
                 </div>
             </div>
+
+            <div class="col-lg-4 col-md-6">
+                <div class="card text-bg-light mb-3 mt-3">
+                      <div class="card-body">
+                      <h5 class="card-title"><span class="badge text-bg-primary">G</span> Google</h5>
+                      <p class="card-text">Google web resources</p>
+                      </div>
+                      <div class="list-group list-group-flush">
+                          <a href="https://translate.google.com/" class="list-group-item list-group-item-action"><span class="badge text-bg-primary">T</span> Translate</a>
+                          <a href="https://gmail.com/" class="list-group-item list-group-item-action"><span class="badge text-bg-primary">G</span> GMail</a>
+                          <a href="https://calendar.google.com/" class="list-group-item list-group-item-action"><span class="badge text-bg-primary">C</span> Calendar</a>
+                      </div>
+                </div>
+            </div>
+
+            <div class="col-lg-4 col-md-6">
+                <div class="card text-bg-light mb-3 mt-3">
+                      <div class="card-body">
+                      <h5 class="card-title"><span class="badge text-bg-danger">Y</span> Yandex</h5>
+                      <p class="card-text">Yandex web resources</p>
+                      </div>
+                      <div class="list-group list-group-flush">
+                          <a href="https://yandex.ru/maps/" class="list-group-item list-group-item-action"><span class="badge text-bg-danger">M</span> Maps</a>
+                      </div>
+                </div>
+            </div>
+
+            <div class="col-lg-4 col-md-6">
+                <div class="card text-bg-light mb-3 mt-3">
+                      <div class="card-body">
+                      <h5 class="card-title">Datasource</h5>
+                      <p class="card-text">Data sources</p>
+                      </div>
+                      <div class="list-group list-group-flush">
+                          <a href="https://mega.nz" class="list-group-item list-group-item-action"><span class="badge text-bg-danger">M</span> Mega.nz</a>
+                          <a href="http://rutracker.org/forum/index.php" class="list-group-item list-group-item-action"><span class="badge text-bg-danger">Ru</span> Rutracker</a>
+                      </div>
+                </div>
+            </div>
+
        </div>
     </div>
 </body>
