--- a/index.html
+++ b/index.html
@@ -31,9 +31,19 @@
             <div class="col-lg-4 col-md-6">
                 <div class="card border-dark mb-3 mt-3">
                       <div class="card-body">
-                          <h5 class="card-title">&#128187; Programming</h5>
-                          <p class="card-text">Programming related resources</p>
-                          <a href="./pages/programming.html" class="btn btn-dark">Go programming</a>
+                          <h5 class="card-title">&#128295; Tools</h5>
+                          <p class="card-text">Web-resources to use as utils</p>
+                          <a href="./pages/tools.html" class="btn btn-dark">Go tools</a>
+                      </div>
+                </div>
+            </div>
+
+            <div class="col-lg-4 col-md-6">
+                <div class="card border-dark mb-3 mt-3">
+                      <div class="card-body">
+                          <h5 class="card-title">&#128187; Education</h5>
+                          <p class="card-text">Educational resources</p>
+                          <a href="./pages/education.html" class="btn btn-dark">Go education</a>
                       </div>
                 </div>
             </div>
@@ -54,16 +64,6 @@
                           <h5 class="card-title">&#128221; Blogs</h5>
                           <p class="card-text">Old-fashioned blog collection</p>
                           <a href="./pages/blogs.html" class="btn btn-primary">Go blogs</a>
-                      </div>
-                </div>
-            </div>
-
-            <div class="col-lg-4 col-md-6">
-                <div class="card border-dark mb-3 mt-3">
-                      <div class="card-body">
-                          <h5 class="card-title">&#128295; Tools</h5>
-                          <p class="card-text">Web-resources to use as utils</p>
-                          <a href="./pages/tools.html" class="btn btn-dark">Go tools</a>
                       </div>
                 </div>
             </div>
