added favicon, updated colors and emojis

--- a/pages/blogs.html
+++ b/pages/blogs.html
@@ -4,9 +4,16 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>&#128221; Blogs</title>
+    <title>Blogs</title>
 
     <link rel="stylesheet" type="text/css" href="../style/bootstrap.min.css">
+
+    <link rel="apple-touch-icon" sizes="180x180" href="../img/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="../img/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="../img/favicon-16x16.png">
+    <link rel="manifest" href="../img/site.webmanifest">
+
+    <meta name="theme-color" content="#000000">
 </head>
 <body>
     <script src="../script/bootstrap.min.js"></script>
@@ -24,7 +31,7 @@
             <div class="col-lg-4 col-md-6">
                 <div class="card text-bg-secondary mb-3 mt-3">
                       <div class="card-body">
-                      <h5 class="card-title">&#128221; It specialists</h5>
+                      <h5 class="card-title">&#128187; It specialists</h5>
                       <p class="card-text">it specialists blogs</p>
                       </div>
                       <div class="list-group list-group-flush">
@@ -41,22 +48,22 @@
             </div>
 
             <div class="col-lg-4 col-md-6">
-                <div class="card text-bg-secondary mb-3 mt-3">
+                <div class="card text-bg-info mb-3 mt-3">
                       <div class="card-body">
-                      <h5 class="card-title">&#128221; Artists</h5>
+                      <h5 class="card-title">&#127984; Artists</h5>
                       <p class="card-text">Artists blogs</p>
                       </div>
                       <div class="list-group list-group-flush">
                           <a href="https://blog.dahr.ru/" class="list-group-item list-group-item-action"><span class="badge text-bg-danger">D</span> Dahr's blog</a>
-                          <a href="https://karanak.livejournal.com/" class="list-group-item list-group-item-action"><span class="badge text-bg-danger">K</span> Karanak</a>
+                          <a href="https://karanak.livejournal.com/" class="list-group-item list-group-item-action"><span class="badge text-bg-primary">K</span> Karanak</a>
                       </div>
                 </div>
             </div>
 
             <div class="col-lg-4 col-md-6">
-                <div class="card text-bg-secondary mb-3 mt-3">
+                <div class="card text-bg-light mb-3 mt-3">
                       <div class="card-body">
-                      <h5 class="card-title">&#128221; Geek</h5>
+                      <h5 class="card-title">&#128190; Geek</h5>
                       <p class="card-text">Blogs with geek content</p>
                       </div>
                       <div class="list-group list-group-flush">
