--- a/pages/entertainment.html
+++ b/pages/entertainment.html
@@ -7,6 +7,14 @@
     <title>Entertainment</title>
 
     <link rel="stylesheet" type="text/css" href="../style/bootstrap.min.css">
+
+
+    <link rel="apple-touch-icon" sizes="180x180" href="../img/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="../img/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="../img/favicon-16x16.png">
+    <link rel="manifest" href="../img/site.webmanifest">
+
+    <meta name="theme-color" content="#000000">
 </head>
 <body>
     <script src="../script/bootstrap.min.js"></script>
@@ -21,7 +29,7 @@
     <div class="container">
        <div class="row"  data-masonry='{"percentPosition": true }'>
             <div class="col-lg-4 col-md-6">
-                <div class="card text-bg-light mb-3 mt-3">
+                <div class="card text-bg-warning mb-3 mt-3">
                       <div class="card-body">
                       <h5 class="card-title">&#128173; Inspiration</h5>
                       <p class="card-text">Some websites where I take inspiration</p>
@@ -63,38 +71,38 @@
                 </div>
             </div>
             <div class="col-lg-4 col-md-6">
-                <div class="card text-bg-primary mb-3 mt-3">
+                <div class="card text-bg-dark mb-3 mt-3">
                       <div class="card-body">
-                      <h5 class="card-title">&#127911; Movies</h5>
+                      <h5 class="card-title">&#127916; Movies</h5>
                       <p class="card-text">Movies related links</p>
                       </div>
                       <div class="list-group list-group-flush">
-                          <a href="https://hd.kinopoisk.ru/" class="list-group-item list-group-item-action"><span class="badge bg-info">K</span> Kinopoisk HD</a>
-                          <a href="http://baskino.me/" class="list-group-item list-group-item-action"><span class="badge bg-info">B</span> Baskino.me</a>
+                          <a href="https://hd.kinopoisk.ru/" class="list-group-item list-group-item-action"><span class="badge bg-dark">K</span> Kinopoisk HD</a>
+                          <a href="http://baskino.me/" class="list-group-item list-group-item-action"><span class="badge bg-dark">B</span> Baskino.me</a>
                       </div>
                 </div>
             </div>
             <div class="col-lg-4 col-md-6">
-                <div class="card text-bg-primary mb-3 mt-3">
+                <div class="card text-bg-secondary mb-3 mt-3">
                       <div class="card-body">
-                      <h5 class="card-title">&#127911; Music</h5>
+                      <h5 class="card-title">&#127925; Music</h5>
                       <p class="card-text">Music related links</p>
                       </div>
                       <div class="list-group list-group-flush">
-                          <a href="https://music.yandex.ru/" class="list-group-item list-group-item-action"><span class="badge bg-info">Y</span> Yandex Music</a>
+                          <a href="https://music.yandex.ru/" class="list-group-item list-group-item-action"><span class="badge bg-danger">Y</span> Yandex Music</a>
                       </div>
                 </div>
             </div>
             <div class="col-lg-4 col-md-6">
-                <div class="card text-bg-primary mb-3 mt-3">
+                <div class="card text-bg-light mb-3 mt-3">
                       <div class="card-body">
-                      <h5 class="card-title">&#127911; Fan sites</h5>
+                      <h5 class="card-title">&#127922; Fan sites</h5>
                       <p class="card-text">Fan sitess</p>
                       </div>
                       <div class="list-group list-group-flush">
-                          <a href="https://wiby.me/" class="list-group-item list-group-item-action"><span class="badge text-bg-success">W</span> Wiby</a>
-                          <a href="https://swalker.org/" class="list-group-item list-group-item-action"><span class="badge text-bg-success">S</span> Swalker</a>
-                          <a href="https://everydaycarry.com/" class="list-group-item list-group-item-action"><span class="badge text-bg-success">E</span> EDC</a>
+                          <a href="https://wiby.me/" class="list-group-item list-group-item-action"><span class="badge text-bg-light">W</span> Wiby</a>
+                          <a href="https://swalker.org/" class="list-group-item list-group-item-action"><span class="badge text-bg-dark">S</span> Swalker</a>
+                          <a href="https://everydaycarry.com/" class="list-group-item list-group-item-action"><span class="badge text-bg-dark">E</span> EDC</a>
                           <a href="https://lozhki.net/" class="list-group-item list-group-item-action"><span class="badge text-bg-success">L</span> Lozhki.net</a>
                       </div>
                 </div>
