--- a/pages/tools.html
+++ b/pages/tools.html
@@ -7,6 +7,13 @@
     <title>Tools</title>
 
     <link rel="stylesheet" type="text/css" href="../style/bootstrap.min.css">
+
+    <link rel="apple-touch-icon" sizes="180x180" href="../img/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="../img/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="../img/favicon-16x16.png">
+    <link rel="manifest" href="../img/site.webmanifest">
+
+    <meta name="theme-color" content="#000000">
 </head>
 <body>
     <script src="../script/bootstrap.min.js"></script>
@@ -66,12 +73,12 @@
             <div class="col-lg-4 col-md-6">
                 <div class="card text-bg-light mb-3 mt-3">
                       <div class="card-body">
-                      <h5 class="card-title">Datasource</h5>
+                      <h5 class="card-title">&#128191; Datasource</h5>
                       <p class="card-text">Data sources</p>
                       </div>
                       <div class="list-group list-group-flush">
                           <a href="https://mega.nz" class="list-group-item list-group-item-action"><span class="badge text-bg-danger">M</span> Mega.nz</a>
-                          <a href="http://rutracker.org/forum/index.php" class="list-group-item list-group-item-action"><span class="badge text-bg-danger">Ru</span> Rutracker</a>
+                          <a href="http://rutracker.org/forum/index.php" class="list-group-item list-group-item-action"><span class="badge text-bg-success">Ru</span> Rutracker</a>
                       </div>
                 </div>
             </div>
