--- a/index.html
+++ b/index.html
@@ -4,9 +4,16 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>&#9875; start_page</title>
+    <title>mg's start_page</title>
 
     <link rel="stylesheet" type="text/css" href="./style/bootstrap.min.css">
+
+    <link rel="apple-touch-icon" sizes="180x180" href="./img/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="./img/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="./img/favicon-16x16.png">
+    <link rel="manifest" href="./img/site.webmanifest">
+
+    <meta name="theme-color" content="#000000">
 </head>
 <body>
     <script src="./script/bootstrap.min.js"></script>
