--- a/pages/education.html
+++ b/pages/education.html
@@ -4,9 +4,17 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>&#128208; Education</title>
+    <title>Education</title>
 
     <link rel="stylesheet" type="text/css" href="../style/bootstrap.min.css">
+
+    <link rel="apple-touch-icon" sizes="180x180" href="../img/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="../img/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="../img/favicon-16x16.png">
+    <link rel="manifest" href="../img/site.webmanifest">
+
+    <meta name="theme-color" content="#000000">
+
 </head>
 <body>
     <script src="../script/bootstrap.min.js"></script>
@@ -24,23 +32,23 @@
             <div class="col-lg-4 col-md-6">
                 <div class="card text-bg-dark mb-3 mt-3">
                       <div class="card-body">
-                      <h5 class="card-title">&#129327; Automatic cources</h5>
+                      <h5 class="card-title">&#128187; Automatic cources</h5>
                       <p class="card-text">Automatic cources</p>
                       </div>
                       <div class="list-group list-group-flush">
                           <a href="https://leetcode.com/" class="list-group-item list-group-item-action"><span class="badge text-bg-warning">Leet</span> Leetcode</a>
-                          <a href="https://hackerrank.com/" class="list-group-item list-group-item-action"><span class="badge text-bg-secondary">Hacker</span> Hackerrank</a>
-                          <a href="https://www.codewars.com/" class="list-group-item list-group-item-action"><span class="badge text-bg-secondary">Code</span> Codewars</a>
-                          <a href="https://tryhackme.com/" class="list-group-item list-group-item-action"><span class="badge text-bg-secondary">Try</span> Tryhackme</a>
-                          <a href="https://javarush.ru/" class="list-group-item list-group-item-action"><span class="badge text-bg-secondary">Java</span> Javarush</a>
+                          <a href="https://hackerrank.com/" class="list-group-item list-group-item-action"><span class="badge text-bg-dark">Hacker</span> Hackerrank</a>
+                          <a href="https://www.codewars.com/" class="list-group-item list-group-item-action"><span class="badge text-bg-danger">Code</span> Codewars</a>
+                          <a href="https://tryhackme.com/" class="list-group-item list-group-item-action"><span class="badge text-bg-success">Try</span> Tryhackme</a>
+                          <a href="https://javarush.ru/" class="list-group-item list-group-item-action"><span class="badge text-bg-warning">Java</span> Javarush</a>
                       </div>
                 </div>
             </div>
 
             <div class="col-lg-4 col-md-6">
-                <div class="card text-bg-dark mb-3 mt-3">
+                <div class="card text-bg-success mb-3 mt-3">
                       <div class="card-body">
-                      <h5 class="card-title">&#129327; Learning articles</h5>
+                      <h5 class="card-title">&#128196; Learning articles</h5>
                       <p class="card-text">Programming related resources</p>
                       </div>
                       <div class="list-group list-group-flush">
@@ -53,9 +61,9 @@
             </div>
 
             <div class="col-lg-4 col-md-6">
-                <div class="card text-bg-dark mb-3 mt-3">
+                <div class="card text-bg-secondary mb-3 mt-3">
                       <div class="card-body">
-                      <h5 class="card-title">&#129327; Online cources</h5>
+                      <h5 class="card-title">&#128218; Online cources</h5>
                       <p class="card-text">Online cources</p>
                       </div>
                       <div class="list-group list-group-flush">
